[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/05.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Bullet/Enemy_Bullet.gd" type="Script" id=2]

[node name="Enemy_Bullet" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8.5, -14.1, 8.5, 19, -8.5, 19, -8.5, -11, -5.5, -18.4, -5.5, -19, 5.5, -19 )

[connection signal="area_shape_entered" from="." to="." method="_on_Enemy_Bullet_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
